--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,5 @@
-<h2>Down Dog Yoga Homepage</h2>
-<a href="/cateories">Categories</a>
-<% console.log('categories --->', categories) %>
-    <ul>
-        <% for( let i=0; i < categories.length; i++ ) { %>
-            <% let category=categories[i] %>
-                <li class="sidelist">
-                    <a href="/categories/<%= category.id %>">
-                        <%= category.category_name %>
-                    </a>
-                    <% } %>
-                </li>
-    </ul>
+<h2>Welcome to my Project!</h2>
+
+<p>yoga is.....</p>
+
+<a href="/categories">For more information</a>
