add search page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,11 @@
-<h2>Welcome to my Project!</h2>
+<head>
+    <title>Down Dog Yoga</title>
+</head>
+<h1>Welcome to Down Dog Yoga</h1>
+<p>Yoga is a light, which once lit, will never dim. -BKS Iyengar</p>
+<div>
+    <a href="/auth/signup"><button class="btn btn-primary favorite-btn">Sign Up</button></a>
+    <br>
+    <a href="/auth/login"><button class="btn btn-primary favorite-btn">Log In</button></a>
 
-<p>yoga is.....</p>
-
-<a href="/categories">For more information</a>
+</div>
