--- a/views/search-level.ejs
+++ b/views/search-level.ejs
@@ -4,12 +4,12 @@
             <div class="column is-8-desktop">
                 <div class="p-6 shadow rounded content">
                     <h2 class="section-title">Search</h2>
-                    <form method="POST" action="/search">
+                    <form method="POST" action="/search/level">
                         <div class="columns is-multiline">
 
                             <div class="form-group column is-12">
-                                <label for="pose">Item</label>
-                                <input type="text" class="input" id="pose" name="pose" placeholder="" required>
+                                <label for="level">Level</label>
+                                <input type="text" class="input" id="level" name="level" placeholder="" required>
                             </div>
                             <div class="column is-12">
                                 <button type="submit" class="btn btn-primary">Send</button>
