--- a/views/search.ejs
+++ b/views/search.ejs
@@ -8,11 +8,11 @@
                         <div class="columns is-multiline">
 
                             <div class="form-group column is-12">
-                                <label for="pose">Item</label>
+                                <label for="pose">Pose Name</label>
                                 <input type="text" class="input" id="pose" name="pose" placeholder="" required>
                             </div>
                             <div class="column is-12">
-                                <button type="submit" class="btn btn-primary">Send</button>
+                                <button type="submit" class="btn btn-primary">Go to Pose</button>
                             </div>
                         </div>
                     </form>
