--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
 <head>
     <title>Down Dog Yoga</title>
 </head>
-<h2>Welcome to Down Dog Yoga</h2>
-<p>Yoga is a light, which once lit, will never dim. -BKS Iyengar</p>
-<div>
-    <a href="/auth/signup"><button class="btn btn-primary favorite-btn">Sign Up</button></a>
+<br>
+<h2 class="text-center">Welcome to Down Dog Yoga</h2>
+<br>
+<p class="text-center">Yoga is a light, which once lit, will never dim. -BKS Iyengar</p>
+<div class="text-center">
     <br>
+    <a href="/auth/signup"><button class="btn btn-primary favorite-btn">Sign Up</button></a>
     <a href="/auth/login"><button class="btn btn-primary favorite-btn">Log In</button></a>
-
+</div>
 </div>
