--- a/views/search-level.ejs
+++ b/views/search-level.ejs
@@ -10,9 +10,10 @@
                             <div class="form-group column is-12">
                                 <label for="level">Level</label>
                                 <input type="text" class="input" id="level" name="level" placeholder="" required>
+
                             </div>
                             <div class="column is-12">
-                                <button type="submit" class="btn btn-primary">Send</button>
+                                <button type="submit" class="btn btn-primary">Search</button>
                             </div>
                         </div>
                     </form>
