--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 <p class="text-center">Yoga is a light, which once lit, will never dim. -BKS Iyengar</p>
 <div class="text-center">
     <br>
-    <a href="/auth/signup"><button class="btn btn-primary favorite-btn">Sign Up</button></a>
-    <a href="/auth/login"><button class="btn btn-primary favorite-btn">Log In</button></a>
+    <a href="/categories"><button class="btn btn-primary favorite-btn">Categories</button></a>
+    <a href="/poses"><button class="btn btn-primary favorite-btn">Poses</button></a>
 </div>
 </div>
