--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,18 +1,58 @@
-<link rel="stylesheet" href="/style.css">
-<div class="container">
-    <h2 class="text-center">Categories</h2>
-    <% console.log('categories --->', categories) %>
-        <ul class="list-group list-group-light justify-content-center max-width: 200%">
-            <% for (let i=0; i < categories.length; i++) { %>
-                <% let category=categories[i] %>
-                    <li class="list-group-item d-flex justify-content-center align-items-center">
-                        <a href="/categories/<%= category.id %>">
-                            <%= category.category_name %>
-                        </a>
-                        <span class="badge badge-primary rounded-pill">
-                            <%= category.count %>
-                        </span>
+<!-- details page -->
+<section class="pt-5">
+    <div class="container shadow section-sm rounded">
+        <div class="columns is-multiline">
+            <!-- sidebar -->
+            <div class="column is-3-desktop is-12-tablet">
+                <ul class="sidenav">
+                    <li title="categories" class="sidelist parent active">
+                        <a href="/categories">Categories</a>
+                        <% console.log('checking categories', categories) %>
+                            <ul>
+                                <% categories.forEach((category)=> { %>
+                                    <li class="sidelist">
+                                        <a href="/categories/<%= category.id %>">
+                                            <%= category.category_name %>
+                                        </a>
+                                    </li>
+                                    <% }); %>
+                            </ul>
                     </li>
-                    <% } %>
-        </ul>
-</div>
+                    <li class="sidelist">
+                        <a href="/categories">Categories</a>
+                    </li>
+                    <li class="sidelist">
+                        <a href="/poses">Poses</a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- body -->
+            <div class="column is-8-desktop is-12-tablet">
+                <div class="px-4">
+                    <h2 class="mb-4 has-text-weight-medium">Categories</h2> <!-- main content -->
+                    <div class="content">
+                        <% categories.forEach((category)=> { %>
+                            <div class="card">
+                                <div class="card-content">
+                                    <div class="content">
+                                        <h4>
+                                            <strong>
+                                                <a href="/categories/<%= category.id %>">
+                                                    <%= category.category_name %>
+                                                </a>
+                                            </strong>
+                                        </h4>
+                                        <div class="mt-5">
+                                            <h5>Category Description</h5>
+                                            <p>
+                                                <%= category.category_description %>
+                                            </p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr />
+                            <% }); %>
+                    </div>
