--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,58 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<!--
+ // WEBSITE: https://themefisher.com
+ // TWITTER: https://twitter.com/themefisher
+ // FACEBOOK: https://www.facebook.com/themefisher
+ // GITHUB: https://github.com/themefisher/
+-->
+
+<html lang="zxx">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Authentication</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
+    <meta charset="utf-8">
+    <title>GoDocs documentation theme</title>
+
+    <!-- mobile responsive meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <!-- theme meta -->
+    <meta name="theme-name" content="godocs-bulma" />
+
+    <!-- ** Plugins Needed for the Project ** -->
+    <!-- plugins -->
+    <link rel="stylesheet" href="/plugins/bulma/bulma.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> -->
+    <link rel="stylesheet" href="/plugins/themify-icons/themify-icons.css">
+    <!-- <link rel="stylesheet" href="bower_components/themify-icons/themify-icons.css" /> -->
+    <!-- Main Stylesheet -->
+    <link href="/css/style.css" rel="stylesheet">
+
+    <link href="" rel="stylesheet">
+
+    <!--Favicon-->
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
-  <%- include('partials/alerts') %>
+    <nav class="navbar is-sticky-top navigation" role="navigation" aria-label="main navigation">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/">
+                    <img class="img-fluid" src="/images/yogalogo.png" alt="godocs" width="155px">
+                </a>
 
+                <a role="button" class="navbar-burger burger" aria-expanded="false" data-target="navbar-links">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/Search">Search By Pose</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/level">Search By Level</a>
-            </li>
+            <div id="navbar-links" class="navbar-menu">
+                <div class="navbar-start ml-auto">
+                    <a class="navbar-item" href="/">Home</a>
+                    <a class="navbar-item" href="/categories">Categories</a>
+                    <a class="navbar-item" href="/search">Search Page</a>
+                </div>
 
-          </ul>
+                <div class="navbar-end ml-0">
+                    <div class="navbar-item py-0">
+                        <a href="/poses" class="btn btn-sm btn-outline-primary ml-4">Poses</a>
+                        <a href="/profile" class="btn btn-sm btn-primary ml-4">Profile</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
-
-
-
-
-
     <%- body %>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-        crossorigin="anonymous"></script>
+        <!-- /call to action -->
+
+        <footer>
+            <div class="container">
+                <div class="columns is-multiline is-align-items-center border-bottom py-5">
+                    <div class="column is-4-desktop is-12-tablet">
+                        <ul class="list-inline footer-menu has-text-centered has-text-left-desktop">
+                            <li class="list-inline-item"><a href="/changelog.html">Changelog</a></li>
+                            <li class="list-inline-item"><a href="/contact.html">contact</a></li>
+                            <li class="list-inline-item"><a href="/search.html">Search</a></li>
+                        </ul>
+                    </div>
+                    <div class="column is-4-desktop is-12-tablet">
+                        <a class="navbar-brand is-justify-content-center" href="index.html">
+                            <img class="img-fluid" src="/images/yogalogo.png" alt="Hugo documentation theme">
+                        </a>
+                    </div>
+                    <div class="column is-4-desktop is-12-tablet">
+                        <ul class="list-inline social-icons has-text-right-desktop has-text-centered">
+                            <li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="ti-twitter-alt"></i></a></li>
+                            <li class="list-inline-item"><a href="https://github.com/jesswandering"><i
+                                        class="ti-github"></i></a>
+                            </li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/jesss-lee/"><i
+                                        class="ti-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="py-4 has-text-centered">
+                    <small class="text-light">Copyright © 2020 - Design &amp; Developed by <a
+                            href="https://themefisher.com">themefisher</a></small>
+                </div>
+            </div>
+        </footer>
+
+        <!-- plugins -->
+        <script src="/plugins/jQuery/jquery.min.js"></script>
+        <script src="/plugins/masonry/masonry.min.js"></script>
+        <script src="/plugins/clipboard/clipboard.min.js"></script>
+        <script src="/plugins/match-height/jquery.matchHeight-min.js"></script>
+
+        <!-- Main Script -->
+        <script src="/js/script.js"></script>
+
 </body>
 
 </html>
