--- a/views/search-level.ejs
+++ b/views/search-level.ejs
@@ -1,24 +1,25 @@
 <section class="section">
-    <div class="container">
-        <div class="columns is-desktop is-justify-content-center">
+    <div class="container py-5 h-100">
+        <div class=" columns is-desktop is-justify-content-center">
             <div class="column is-8-desktop">
-                <div class="p-6 shadow rounded content">
-                    <h2 class="section-title">Search</h2>
-                    <form method="POST" action="/search/level">
-                        <div class="columns is-multiline">
-
-                            <div class="form-group column is-12">
-                                <label for="level">Level</label>
-                                <input type="text" class="input" id="level" name="level" placeholder="" required>
-
+                <div class="card bg-white text-black" style="border-radius: 1rem; shadow rounded content">
+                    <div class="card-body p-5 text-center">
+                        <h2 class="section-title">Search</h2>
+                        <form method="POST" action="/search/level">
+                            <div class="columns is-multiline">
+                                <br>
+                                <div class="form-group column is-12">
+                                    <label for="level">Level</label>
+                                    <input type="text" class="input" id="level" name="level" placeholder="" required>
+                                </div>
+                                <br>
+                                <div class="column is-12">
+                                    <button type="submit" class="btn btn-primary">Search</button>
+                                </div>
                             </div>
-                            <div class="column is-12">
-                                <button type="submit" class="btn btn-primary">Search</button>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </section>
