--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,19 @@
-<head>
-    <title>Down Dog Yoga</title>
-</head>
-<br>
-<h2 class="text-center">Welcome to Down Dog Yoga</h2>
-<br>
-<p class="text-center">Yoga is a light, which once lit, will never dim. -BKS Iyengar</p>
-<div class="text-center">
-    <br>
-    <a href="/categories"><button class="btn btn-primary favorite-btn">Categories</button></a>
-    <a href="/poses"><button class="btn btn-primary favorite-btn">Poses</button></a>
-</div>
-</div>
+<section class="section">
+    <div class="container py-5 h-100">
+        <div class="columns is-desktop is-align-items-center is-justify-content-center">
+            <div class="column is-8-desktop">
+                <div class="card bg-white text-black" style="border-radius: 1rem; shadow rounded content">
+                    <div class="card-body p-5 text-center has-text-centered">
+
+                        <h2 class="section-title">Welcome to Down Dog Yoga</h2>
+                        <br>
+                        <p class="text-center">Yoga is a light, which once lit, will never dim. -BKS Iyengar</p>
+                        <br>
+                        <a href="/categories"><button class="btn btn-primary favorite-btn">Go to
+                                Categories</button></a>
+                        <a href="/poses"><button class="btn btn-primary favorite-btn">Go to Poses</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
