--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="/">
-                    <img class="img-fluid" src="/images/yogalogo.png" alt="godocs" width="155px">
+                    <img class="img-fluid" src="/images/yogalogo.png" alt="downdogyoga" width="100px">
                 </a>
 
                 <a role="button" class="navbar-burger burger" aria-expanded="false" data-target="navbar-links">
@@ -83,7 +83,7 @@
                     </div>
                     <div class="column is-4-desktop is-12-tablet">
                         <a class="navbar-brand is-justify-content-center" href="index.html">
-                            <img class="img-fluid" src="/images/yogalogo.png" alt="Hugo documentation theme">
+                            <img class="img-fluid" src="/images/yogalogo.png" alt="downdogyoga" width="100px">
                         </a>
                     </div>
                     <div class="column is-4-desktop is-12-tablet">
