--- a/views/pose.ejs
+++ b/views/pose.ejs
@@ -16,7 +16,7 @@
             <div class="column is-8-desktop is-12-tablet">
                 <div class="px-4">
                     <h2 class="mb-4 has-text-weight-medium">
-                        <%= pose.english_name %>
+                        <%= pose.english_name %> Pose
                     </h2>
                     <div class="content">
                         <div class="card">
