--- a/views/search.ejs
+++ b/views/search.ejs
@@ -11,7 +11,7 @@
                             <div class="columns is-multiline">
 
                                 <div class="form-group column is-12">
-                                    <label for="pose">Pose Name</label>
+                                    <label for="pose">Enter Pose Name:</label>
                                     <input type="text" class="input" id="pose" name="pose" placeholder="" required>
                                 </div>
                                 <br>
