--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,7 @@ VERSION:	Versoin Number
 -------------------------------------------------------------------*/
 /*  typography */
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800&display=swap");
+
 body {
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -24,7 +25,8 @@ body {
   color: #333;
 }
 
-p, .paragraph {
+p,
+.paragraph {
   font-weight: 400;
   color: #333;
   font-size: 16px;
@@ -33,53 +35,73 @@ p, .paragraph {
   margin-bottom: 1rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #222;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   line-height: 1.2;
 }
 
-h1, .h1 {
+h1,
+.h1 {
   font-size: 50px;
   font-weight: 800;
 }
+
 @media (max-width: 575px) {
-  h1, .h1 {
+
+  h1,
+  .h1 {
     font-size: 36px;
     font-weight: 600;
   }
 }
 
-h2, .h2 {
+h2,
+.h2 {
   font-size: 42px;
   font-weight: 800;
 }
+
 @media (max-width: 575px) {
-  h2, .h2 {
+
+  h2,
+  .h2 {
     font-size: 32px;
     font-weight: 600;
   }
 }
 
-h3, .h3 {
+h3,
+.h3 {
   font-size: 32px;
 }
+
 @media (max-width: 575px) {
-  h3, .h3 {
+
+  h3,
+  .h3 {
     font-size: 28px;
   }
 }
 
-h4, .h4 {
+h4,
+.h4 {
   font-size: 26px;
 }
 
-h5, .h5 {
+h5,
+.h5 {
   font-size: 22px;
 }
 
-h6, .h6 {
+h6,
+.h6 {
   font-size: 18px;
 }
 
@@ -106,34 +128,48 @@ dd {
   font-weight: 600;
   display: inline-block;
 }
-.btn:hover, .btn:active, .btn:focus {
+
+.btn:hover,
+.btn:active,
+.btn:focus {
   outline: 0;
   box-shadow: none !important;
 }
+
 .btn-sm {
   font-size: 14px;
   padding: 10px 25px;
 }
 
 .btn-primary {
-  background: #FF0043;
+  background: #ee6e46;
   color: #fff;
-  border-color: #FF0043;
+  border-color: #ee6e46;
 }
-.btn-primary:active, .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary.active {
+
+.btn-primary:active,
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary.focus,
+.btn-primary.active {
   color: #fff;
-  background: #cc0036 !important;
-  border-color: #cc0036 !important;
+  background: #ea8a6c !important;
+  border-color: #ea8a6c !important;
 }
 
 .btn-outline-primary {
   background: transparent;
-  color: #FF0043;
-  border-color: #FF0043;
+  color: #ee6e46;
+  border-color: #ee6e46;
 }
-.btn-outline-primary:active, .btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary.focus, .btn-outline-primary.active {
-  background: #cc0036 !important;
-  border-color: #cc0036 !important;
+
+.btn-outline-primary:active,
+.btn-outline-primary:hover,
+.btn-outline-primary:focus,
+.btn-outline-primary.focus,
+.btn-outline-primary.active {
+  background: #ea8a6c !important;
+  border-color: #ea8a6c !important;
   color: #fff;
 }
 
@@ -160,12 +196,12 @@ body {
 }
 
 ::-moz-selection {
-  background: #ff3369;
+  background: #ed6e46;
   color: #fff;
 }
 
 ::selection {
-  background: #ff3369;
+  background: #ed6e46;
   color: #fff;
 }
 
@@ -210,6 +246,7 @@ select {
   cursor: pointer;
   transition: 0.2s ease;
 }
+
 a:focus,
 button:focus,
 select:focus {
@@ -217,7 +254,7 @@ select:focus {
 }
 
 a:hover {
-  color: #FF0043;
+  color: #ee6e46;
 }
 
 .slick-slide {
@@ -230,10 +267,12 @@ a:hover {
   padding-left: 0;
   padding-right: 0;
 }
+
 .section-sm {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
 .section-title {
   margin-bottom: 40px;
 }
@@ -252,6 +291,7 @@ a:hover {
 .overlay {
   position: relative;
 }
+
 .overlay::before {
   position: absolute;
   content: "";
@@ -267,11 +307,16 @@ a:hover {
   outline: 0 !important;
 }
 
-.rounded, .card-icon, .card {
+.rounded,
+.card-icon,
+.card {
   border-radius: 12px !important;
 }
 
-.shadow, .card, .search-wrapper .input, .navigation.nav-bg {
+.shadow,
+.card,
+.search-wrapper .input,
+.navigation.nav-bg {
   box-shadow: 0px 15px 60px rgba(62, 62, 62, 0.102) !important;
 }
 
@@ -280,11 +325,11 @@ a:hover {
 }
 
 .bg-primary {
-  background: #FF0043 !important;
+  background: #ee6e46 !important;
 }
 
 .text-primary {
-  color: #FF0043 !important;
+  color: #ee6e46 !important;
 }
 
 .text-light {
@@ -348,11 +393,13 @@ a:hover {
     max-width: 1140px;
   }
 }
+
 @media (max-width: 1023px) {
   .container {
     max-width: 765px;
   }
 }
+
 @media (max-width: 768px) {
   .container {
     max-width: 540px;
@@ -383,9 +430,11 @@ a:hover {
   padding-left: 0;
   list-style: none;
 }
+
 .list-inline .list-inline-item {
   display: inline-block;
 }
+
 .list-inline .list-inline-item:not(:last-child) {
   margin-right: 0.5rem;
 }
@@ -470,13 +519,16 @@ a:hover {
   transition: 0.2s ease;
   padding: 15px 0;
 }
+
 .navigation.nav-bg {
   background: #fff;
 }
+
 @media (max-width: 1023px) {
   .navigation .form-inline {
     width: 100%;
   }
+
   .navigation .form-inline input {
     width: 100%;
   }
@@ -486,9 +538,11 @@ a:hover {
   text-transform: capitalize;
   color: #222;
 }
-.navbar-item:focus, .navbar-item:hover {
+
+.navbar-item:focus,
+.navbar-item:hover {
   background-color: transparent !important;
-  color: #FF0043 !important;
+  color: #ee6e46 !important;
 }
 
 @media (max-width: 1023px) {
@@ -500,6 +554,7 @@ a:hover {
 .navbar-brand {
   align-items: center;
 }
+
 .navbar-brand img {
   max-height: initial;
 }
@@ -525,6 +580,7 @@ a:hover {
   border-radius: 2px;
   top: 5px;
 }
+
 .navbar-burger:hover {
   background-color: #fff;
 }
@@ -534,54 +590,66 @@ a:hover {
     padding: 1.5rem 0;
     text-align: center;
   }
+
   .navbar-end {
     margin: 12px 0 2px;
   }
+
   .navbar-end .btn {
     margin-left: 5px !important;
     margin-right: 5px !important;
     margin-top: 5px;
   }
+
   .hide-on-desktop {
     display: none;
   }
+
   .show-on-desktop {
     display: block !important;
     margin-top: 20px;
   }
 }
+
 .search-wrapper {
   position: relative;
 }
+
 .search-wrapper .input {
   height: 46px;
   border: 0;
   outline: 0;
   padding-left: 17px;
 }
+
 .search-wrapper .input::-moz-placeholder {
   color: #999;
   font-size: 15px;
 }
+
 .search-wrapper .input::placeholder {
   color: #999;
   font-size: 15px;
 }
+
 .search-wrapper .input-lg {
   height: 70px;
 }
+
 .search-wrapper .input.active.focus-visible {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
+
 .search-wrapper button {
   position: absolute;
   right: 5px;
   top: 50%;
   transform: translateY(-50%);
 }
+
 .search-wrapper button i {
-  color: #FF0043;
+  color: #ee6e46;
 }
 
 body,
@@ -597,11 +665,13 @@ textarea {
   transition: 0.2s ease;
   border: 0;
 }
+
 .card-lg .card-body {
   padding: 35px;
 }
+
 .card-icon {
-  background: #FF0043;
+  background: #ee6e46;
   color: #fff;
   height: 55px;
   width: 60px;
@@ -611,16 +681,20 @@ textarea {
   display: block;
   margin-top: 40px;
 }
+
 .card-text {
   margin-bottom: 0;
 }
+
 .card-title {
   font-weight: 700;
   margin-bottom: 0.75rem;
 }
+
 .card-body {
   padding: 25px;
 }
+
 .card:hover {
   box-shadow: 0px 15px 60px rgba(62, 62, 62, 0.2) !important;
 }
@@ -628,6 +702,7 @@ textarea {
 .social-icons {
   margin-bottom: 0;
 }
+
 .social-icons a {
   display: block;
   height: 42px;
@@ -635,21 +710,23 @@ textarea {
   line-height: 42px;
   text-align: center;
   color: #fff;
-  background: #FF0043;
+  background: #ee6e46;
   border-radius: 6px;
 }
 
 .footer-menu {
   margin-bottom: 0;
 }
+
 .footer-menu a {
   display: block;
   padding: 10px;
   color: #333;
   transition: 0.2s ease;
 }
+
 .footer-menu a:hover {
-  color: #FF0043;
+  color: #ee6e46;
 }
 
 /* sidenav */
@@ -658,50 +735,60 @@ textarea {
   padding-right: 20px;
   padding-left: 30px;
 }
+
 .sidenav ul {
   padding-left: 10px;
 }
-.sidenav > li a {
+
+.sidenav>li a {
   padding: 20px 0;
   color: #222;
   display: block;
   font-size: 18px;
   font-weight: 500;
 }
-.sidenav > li:not(:last-child) {
+
+.sidenav>li:not(:last-child) {
   border-bottom: 1px solid #E2E2E2;
 }
+
 .sidenav .sidelist ul {
   display: none;
 }
-.sidenav .parent > a {
-  color: #FF0043 !important;
+
+.sidenav .parent>a {
+  color: #ee6e46 !important;
   position: relative;
   margin-left: 10px;
 }
-.sidenav .parent > a::before {
+
+.sidenav .parent>a::before {
   position: absolute;
   content: "";
   left: -10px;
   top: 25%;
   height: 50%;
   width: 1px;
-  background: #FF0043;
+  background: #ee6e46;
 }
+
 .sidenav .parent ul {
   display: block;
   margin-bottom: 10px;
 }
+
 .sidenav .parent ul a {
   padding: 5px 0;
   font-size: 14px;
   font-weight: 400;
   color: #222;
 }
-.sidenav .parent ul li.active > a {
+
+.sidenav .parent ul li.active>a {
   margin-left: 10px;
 }
-.sidenav .parent ul li.active > a::before {
+
+.sidenav .parent ul li.active>a::before {
   height: 5px;
   width: 5px;
   border-radius: 50%;
@@ -713,12 +800,15 @@ textarea {
 .page-list {
   list-style-type: none;
 }
+
 .page-list a {
   display: none;
 }
+
 .page-list ul {
   padding: 0;
 }
+
 .page-list ul a {
   display: inline-block;
   padding: 7px 0;
@@ -730,11 +820,13 @@ textarea {
   margin-top: 50px;
   justify-content: space-between;
 }
+
 .pagination a {
-  color: #FF0043;
+  color: #ee6e46;
   font-size: 18px;
   font-weight: 500;
 }
+
 .pagination i {
   line-height: 1.6;
 }
@@ -744,27 +836,34 @@ textarea {
   overflow: hidden;
   margin-bottom: 20px;
 }
+
 .code-tabs .nav-tabs {
   margin-bottom: 0;
 }
+
 .code-tabs .nav-tabs .nav-item {
   padding-left: 0;
   border-right: 1px solid #E2E2E2;
 }
+
 .code-tabs .nav-tabs .nav-item .nav-link {
   text-decoration: none;
   font-weight: 500;
   border: 0;
 }
+
 .code-tabs .nav-tabs .nav-item::before {
   display: none;
 }
+
 .code-tabs .nav-tabs .nav-item.active {
-  background: #FF0043;
+  background: #ee6e46;
 }
+
 .code-tabs .nav-tabs .nav-item.active .nav-link {
   color: #fff;
 }
+
 .code-tabs .tab-content {
   padding: 20px 15px;
 }
@@ -772,8 +871,9 @@ textarea {
 pre {
   position: relative;
 }
+
 pre .copy-to-clipboard {
-  background: #FF0043;
+  background: #ee6e46;
   color: #fff;
   cursor: pointer;
   padding: 4px 5px;
@@ -786,7 +886,7 @@ pre .copy-to-clipboard {
   top: 10px;
 }
 
-:not(pre) > code + span.copy-to-clipboard {
+:not(pre)>code+span.copy-to-clipboard {
   display: none;
 }
 
@@ -796,22 +896,26 @@ pre .copy-to-clipboard {
   box-shadow: 0px 50px 60px rgba(62, 62, 62, 0.102) !important;
   background: #fff;
 }
+
 .autocomplete-suggestions .autocomplete-suggestion {
   transition: 0.2s ease;
   padding: 10px;
   font-weight: 500;
 }
+
 .autocomplete-suggestions .autocomplete-suggestion.selected {
-  background: #FF0043;
+  background: #ee6e46;
 }
 
 .search-item a {
   color: #222;
   display: block;
 }
+
 .search-item a:hover {
-  color: #FF0043;
+  color: #ee6e46;
 }
+
 .search-item:not(:last-child) {
   border-bottom: 1px solid #E2E2E2;
 }
@@ -820,6 +924,7 @@ pre .copy-to-clipboard {
   font-size: 15px;
   font-weight: 500;
 }
+
 .form-group .input {
   height: 40px;
   background: transparent;
@@ -829,23 +934,28 @@ pre .copy-to-clipboard {
   padding: 10px 0;
   box-shadow: none;
 }
+
 .form-group .input::-moz-placeholder {
   font-size: 13px;
   color: #999;
 }
+
 .form-group .input::placeholder {
   font-size: 13px;
   color: #999;
 }
+
 .form-group .input:focus {
   outline: 0;
-  border-color: #FF0043;
+  border-color: #ee6e46;
   box-shadow: none;
 }
+
 .form-group .custom-select {
   font-size: 13px;
   color: #999;
 }
+
 .form-group textarea.input {
   height: 100px;
 }
@@ -856,30 +966,37 @@ pre .copy-to-clipboard {
   font-size: 15px;
   padding: 5px 10px;
 }
+
 .badge.added {
   background: #3778FF;
   color: #fff;
 }
+
 .badge.fixed {
   background: #F54773;
   color: #fff;
 }
+
 .badge.changed {
   background: #3AAA55;
   color: #fff;
 }
+
 .badge.depricated {
   background: #343434;
   color: #fff;
 }
+
 .badge.removed {
   background: #3bbfe4;
   color: #fff;
 }
+
 .badge.security {
   background: #F53535;
   color: #fff;
 }
+
 .badge.unreleased {
   background: #A037FF;
   color: #fff;
@@ -888,6 +1005,7 @@ pre .copy-to-clipboard {
 .collapse-wrapper {
   padding: 5px 15px;
 }
+
 .collapse-wrapper .collapse-head {
   text-decoration: none;
   color: #333;
@@ -908,79 +1026,96 @@ pre .copy-to-clipboard {
 .content h6 {
   font-weight: 500;
 }
+
 .content strong {
   font-weight: 600;
 }
+
 .content a {
   text-decoration: underline;
-  color: #FF0043;
+  color: #ee6e46;
 }
+
 .content ol,
 .content ul {
   padding-left: 20px;
   margin-left: 0;
 }
+
 .content ol li,
 .content ul li {
   margin-bottom: 10px;
 }
+
 .content ul {
   list-style: none;
   padding-left: 0;
   margin-bottom: 20px;
 }
+
 .content ul li {
   padding-left: 20px;
   position: relative;
 }
+
 .content ul li::before {
   position: absolute;
   content: "";
   height: 8px;
   width: 8px;
   border-radius: 50%;
-  background: #FF0043;
+  background: #ee6e46;
   left: 3px;
   top: 8px;
 }
+
 .content table {
   width: 100%;
   max-width: 100%;
   margin-bottom: 1rem;
   border: 1px solid #EEEEEE;
 }
+
 .content table td,
 .content table th {
   padding: 0.75rem;
   vertical-align: top;
   margin-bottom: 0;
 }
+
 .content tr:not(:last-child) {
   border-bottom: 1px solid #EEEEEE;
 }
+
 .content th {
   font-weight: 500;
 }
+
 .content thead {
   background: #FBFBFB;
   margin-bottom: 0;
 }
+
 .content thead tr {
   border-bottom: 1px solid #EEEEEE;
 }
+
 .content tbody {
   background: #fff;
   margin-bottom: 0;
 }
+
 .content .notices {
   margin: 2rem 0;
   position: relative;
   overflow: hidden;
 }
+
 .content .notices p {
   padding: 10px;
   margin-bottom: 0;
 }
+
 .content .notices p::before {
   position: absolute;
   top: 2px;
@@ -990,10 +1125,12 @@ pre .copy-to-clipboard {
   content: "\e717";
   left: 10px;
 }
+
 .content .notices.note p {
   border-top: 30px solid #6ab0de;
   background: #e7f2fa;
 }
+
 .content .notices.note p::after {
   content: "Note";
   position: absolute;
@@ -1001,10 +1138,12 @@ pre .copy-to-clipboard {
   color: #fff;
   left: 2rem;
 }
+
 .content .notices.tip p {
   border-top: 30px solid #78C578;
   background: #E6F9E6;
 }
+
 .content .notices.tip p::after {
   content: "Tip";
   position: absolute;
@@ -1012,10 +1151,12 @@ pre .copy-to-clipboard {
   color: #fff;
   left: 2rem;
 }
+
 .content .notices.info p {
   border-top: 30px solid #F0B37E;
   background: #FFF2DB;
 }
+
 .content .notices.info p::after {
   content: "Info";
   position: absolute;
@@ -1023,10 +1164,12 @@ pre .copy-to-clipboard {
   color: #fff;
   left: 2rem;
 }
+
 .content .notices.warning p {
   border-top: 30px solid #E06F6C;
   background: #FAE2E2;
 }
+
 .content .notices.warning p::after {
   content: "Warning";
   position: absolute;
@@ -1034,23 +1177,27 @@ pre .copy-to-clipboard {
   color: #fff;
   left: 2rem;
 }
+
 .content blockquote {
   font-size: 20px !important;
   color: #222;
   padding: 20px 40px;
-  border-left: 2px solid #FF0043;
+  border-left: 2px solid #ee6e46;
   margin: 40px 0;
   font-weight: bold;
   background: #FBFBFB;
 }
+
 .content blockquote p {
   margin-bottom: 0 !important;
 }
+
 .content pre {
   display: block;
   padding: 9.5px;
   margin: 10px 0px 10px;
 }
+
 .content code {
   margin-bottom: 0 !important;
   font-size: 100%;
@@ -1061,41 +1208,51 @@ pre .copy-to-clipboard {
     display: none;
   }
 }
+
 .code-tabs {
   overflow: hidden;
   margin-bottom: 20px;
   background-color: #fff;
 }
+
 .code-tabs .tab-pane {
   display: none;
 }
+
 .code-tabs .tab-pane.active {
   display: block;
 }
+
 .code-tabs .nav-tabs {
   list-style: none;
   margin: 0 !important;
 }
+
 .code-tabs .nav-tabs li {
   padding: 0 !important;
   margin: 0 !important;
 }
+
 .code-tabs .nav-tabs li::before {
   display: none;
 }
+
 .code-tabs .nav-tabs li a {
   border-radius: 0 !important;
   box-shadow: none !important;
   text-decoration: none;
 }
+
 .code-tabs .nav-tabs li a:focus {
-  border-color: #FF0043;
+  border-color: #ee6e46;
 }
+
 .code-tabs .nav-tabs li.active a {
   color: #fff;
-  background-color: #FF0043;
-  border-color: #FF0043;
+  background-color: #ee6e46;
+  border-color: #ee6e46;
 }
+
 .code-tabs .tab-content {
   padding: 20px 15px;
   border: 1px solid #E2E2E2;
@@ -1104,4 +1261,5 @@ pre .copy-to-clipboard {
 .no-pointer {
   pointer-events: none;
 }
+
 /*# sourceMappingURL=style.css.map */
