--- a/views/poses.ejs
+++ b/views/poses.ejs
@@ -38,7 +38,7 @@
                                         <p><img src="<%= pose.url_png %>" alt="<%= pose.english_name %>"
                                                 style="margin-left: 125px;" width="500" height="500"></p>
                                         <h4><strong><a href="/poses/<%= pose.id %>">
-                                                    <%= pose.english_name %>
+                                                    <%= pose.english_name %> Pose
                                                 </a></strong></h4>
                                         <p>
                                             <strong>Sanskrit Name: </strong>
