add: favorites button to pose page

--- a/views/pose.ejs
+++ b/views/pose.ejs
@@ -37,6 +37,9 @@
                                         <p>
                                             <%= pose. pose_benefits %>
                                         </p>
+                                        <br>
+                                        <button class="btn btn-primary favorite-btn">Add to Favorites</button>
+
                                     </div>
                                 </div>
                             </div>
